# lczero-training

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker_entrypoint.sh  example.yaml  init.sh  justfile  meson.build  meson_options.txt  native.ini  pyproject.toml  test_dataloader.py  test_dataloader_python.py  test_protobuf.py  test_protocol_registry.py  test_yaml_parser.py
csrc/: gtb-probe.h
csrc/loader/: data_loader.cc  data_loader.h  data_loader_metrics.cc  data_loader_metrics.h  data_loader_test.cc  frame_type.h  loader_main.cpp  pybind_module.cc  shuffling_frame_sampler.cc  shuffling_frame_sampler.h  shuffling_frame_sampler_test.cc  tensor_generator.cc  tensor_generator.h  tensor_generator_test.cc
csrc/loader/chunk_feed/: chunk_source.h  chunk_source_loader.cc  chunk_source_loader.h  chunk_source_loader_test.cc  chunk_unpacker.cc  chunk_unpacker.h  chunk_unpacker_test.cc  file_path_provider.cc  file_path_provider.h  file_path_provider_main.cc  file_path_provider_test.cc  rawfile_chunk_source.cc  rawfile_chunk_source.h  shuffling_chunk_pool.cc  shuffling_chunk_pool.h  shuffling_chunk_pool_test.cc  tar_chunk_source.cc  tar_chunk_source.h
csrc/loader/chunk_source/: chunk_source.h  chunk_source_view.h  debug_chunk_source.cc  debug_chunk_source.h  rawfile_chunk_source.cc  rawfile_chunk_source.h  tar_chunk_source.cc  tar_chunk_source.h
csrc/loader/stages/: chunk_rescorer.cc  chunk_rescorer.h  chunk_rescorer_test.cc  chunk_source_loader.cc  chunk_source_loader.h  chunk_source_loader_test.cc  chunk_source_splitter.cc  chunk_source_splitter.h  chunk_source_splitter_test.cc  chunk_unpacker.cc  chunk_unpacker.h  chunk_unpacker_test.cc  file_path_provider.cc  file_path_provider.h  file_path_provider_main.cc  file_path_provider_test.cc  join_stage.cc  join_stage.h  join_stage_test.cc  position_sampling.cc  position_sampling.h  shuffling_chunk_pool.cc  shuffling_chunk_pool.h  shuffling_chunk_pool_test.cc  shuffling_frame_sampler.cc  shuffling_frame_sampler.h  shuffling_frame_sampler_test.cc  simple_chunk_extractor.cc  simple_chunk_extractor.h  simple_chunk_extractor_test.cc  simple_chunk_shuffler.cc  simple_chunk_shuffler.h  simple_chunk_shuffler_test.cc  stage.cc  stage.h  stage_factory.cc  stage_factory.h  stage_factory_test.cc  tensor_generator.cc  tensor_generator.h  (+2 more)
csrc/tools/: dump_chunk_main.cc  filter_chunks_main.cc  position_weight_stats_main.cc  rescore_chunk_main.cc  result_distribution_main.cc  startpos_policy_distribution_main.cc
csrc/utils/: gz.cc  gz.h  queue.h  queue_test.cc  stream_shuffler.h  stream_shuffler_test.cc  tensor.h  tensor_test.cc  thread_pool.h  training_data_printer.cc  training_data_printer.h
csrc/utils/metrics/: additive_metric.h  exponential_aggregator.h  group.h  load_metric.h  load_metric_test.cc  printer.h  statistics_metric.h  stats_test.cc
docs/: README.md  architecture.md  checkpoint_migration.md  example.textproto  example.yaml  heads.md  index.md  jsonl.md  loader.md  loader_redesign.md  new_stage.md  overview.md  pybind11.md  shuffling_pool_hanse_sampling.md  stderr.md  swa.md  tools_separation.md  training_difference.md  training_tuple.md  tui.md  tui_cli.md  weights_tool.md
hyperpruning/: train.py
hyperpruning/TMDataProcessor/: TMDataProcessor.sln
hyperpruning/TMDataProcessor/TMDataProcessor/: Program.cs
hyperpruning/TMDataShuffler/: TMDataShuffler.sln
hyperpruning/TMDataShuffler/TMDataShuffler/: Program.cs
ice_skate/loader/: .gitignore  gz.cc  gz.h  loader.cpp  meson.build  tar.cc  tar.h
ice_skate/loader/src/: data_loader.cc  data_loader.h  loader_main.cpp
ice_skate/loader/src/chunk_feed/: chunk_source.h  discovery.cc  discovery.h  discovery.md  discovery_main.cc  tar_chunk_source.cc  tar_chunk_source.h
ice_skate/loader/src/misc/: stream_shuffler.cc  stream_shuffler.h  stream_shuffler_test.cc
ice_skate/loader/src/reader/: gz.cc  tar.cc
proto/: checkpoint_migration_config.proto  data_loader_config.proto  export_config.proto  metrics_config.proto  model_config.proto  root_config.proto  stage_control.proto  training_config.proto  training_metrics.proto
scripts/: diff.py  fixorder.py  init.sh  initsplit.py  inittrainingname.py  pack.py  purge.py  rescore.sh  shuffle.py  slpipeline.sh  slsplit.sh  split.sh  stage.sh  unpack.py  upload.sh
src/: hlo_pb2.pyi
src/lczero_training/: __init__.py  __main__.py  _lczero_training.pyi  data_loader.py  data_loader_config.py  pybind_module.cc
src/lczero_training/commands/: __init__.py  backfill_metrics.py  common.py  daemon.py  dataloader_viz.py  describe_training.py  jax2leela.py  leela2jax.py  migrate_checkpoint.py  overfit.py  test_dataloader.py  train.py  training_eval.py  training_init.py  tui.py  tune_lr.py  weights_tool.py
src/lczero_training/config/: __init__.py  root_config.py  yaml_parser.py
src/lczero_training/daemon/: cli.py  (+8 more)
src/loader/: data_loader.cc  data_loader.h  loader_main.cpp  shuffling_frame_sampler.cc  shuffling_frame_sampler.h  shuffling_frame_sampler_test.cc  tensor_generator.cc  tensor_generator.h
src/tests/: test_dataloader.py  test_protobuf.py  test_protocol_registry.py
src/utils/: gz.cc  gz.h  queue.h  queue_test.cc  readfile.cc  readfile.h  stream_shuffler.cc  stream_shuffler.h  stream_shuffler_test.cc  tensor.h  tensor_test.cc  thread_pool.h
subprojects/: abseil-cpp.wrap
tf/: attention_policy_map.py  aum.py  bishopembeddings.py  chunkparsefunc.py  chunkparser.py  decode_training.py  experimental_parsing.py  gradient_accumulator.py  lc0_az_policy_map.py  make_model.py  mixprec.py  model_to_net.py  multi_head_relative_attention.py  net.proto  net.py  net_to_coreml.py  net_to_model.py  policy_index.py  quant.py  requirements.txt  shufflebuffer.py  start.sh  tempCodeRunnerFile.py  tfprocess.py  tfprocess2.py  train.py  update_steps.py  upgrade.py
tf/configs/: 128x10-swa.yaml  T03.yaml  ccrl.yaml  dummy.yaml  example copy.yaml  example-updated.yaml  example.yaml
training-tools/: README.md  cleanlinks.py  getdata.py  links.txt  linksdirty.txt  untar.py
(+131 files in other folders)
